--- a/sulo-style/scss/navbar.scss
+++ b/sulo-style/scss/navbar.scss
@@ -28,6 +28,12 @@ nav {
 	a:not(.button):not(.top-nav-link) {		
 		color: $white;//map-get($foundation-palette, brown);
 	}
+	.cart-price {
+		display: none;
+		@include breakpoint(medium){
+			display: inline-block;
+		}
+	}
 	a.button.nude {
 		@extend .tiny;
 		font-size: 0.8rem;
@@ -89,12 +95,22 @@ nav {
 	}
 }
 
-.navbar-brand {
+#shopping-icon {
+	padding-right: 0;
+	// padding-left: 0.2rem;
+	@include breakpoint(medium) {
+		padding: 0.7rem 1rem;
+	}
+}
+#navbar-brand {
 	text-transform: uppercase;
 	font-weight: 500;
 	font-size: 0.8rem;
+	padding: 0;
 	@include breakpoint(medium) {
 		font-size: 1.2rem;
+		padding: 0.7rem 1rem;
 	}
+
 	// vertical-align: middle;
 }
