--- a/sulo-style/scss/store.scss
+++ b/sulo-style/scss/store.scss
@@ -46,12 +46,15 @@
 				font-size: 1.4rem;
 				font-weight: bold;
 				text-shadow: 1px 1px 1px rgba($white, 0.7);
-				h2 {
+				.fa-eye:before {
+					vertical-align: middle;
+				}
+				h5 {
 					text-shadow: 0px 1px 1px rgba($white, 0.7);
 					text-overflow: ellipsis;
 					overflow: hidden;
 					white-space: nowrap;
-					font-size: 1.4rem;
+					// font-size: 1.4rem;
 					font-weight: bold;
 				}
 				margin: 0 auto 1rem auto;
